--- a/core/build.gradle
+++ b/core/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     compileOnly libs.auto.value.annotations
     implementation libs.commons.compress
     implementation libs.commons.lang3
-    implementation 'javax.inject:javax.inject:1'
+    implementation libs.javax.inject
     implementation 'org.apache.httpcomponents:httpclient:4.5.2'
     implementation 'commons-io:commons-io:2.8.0'
     implementation libs.univocity.parsers
