--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ mockito = "4.5.1"
 junit = "4.13"
 truth = "1.1.3"
 truthExtension = "1.0.1"
+javaxInject = "1"
 
 [plugins]
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
@@ -35,3 +36,4 @@ mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
 junit = { module = "junit:junit", version.ref = "junit" }
 truth = { module = "com.google.truth:truth", version.ref = "truth" }
 truth-extension = { module = "com.google.truth.extensions:truth-java8-extension", version.ref = "truthExtension" }
+javax-inject = { module = "javax.inject:javax.inject", version.ref = "javaxInject" }
