--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -9,7 +9,7 @@ dependencies {
     compileOnly libs.auto.service
     annotationProcessor libs.auto.value
     compileOnly libs.auto.value.annotations
-    implementation 'javax.inject:javax.inject:1'
+    implementation libs.javax.inject
     implementation 'com.squareup:javapoet:1.13.0'
     implementation libs.commons.lang3
     implementation libs.guava
