--- a/main/build.gradle
+++ b/main/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation project(':core')
     annotationProcessor libs.auto.value
     compileOnly libs.auto.value.annotations
-    implementation 'org.apache.httpcomponents.client5:httpclient5:5.0.3'
+    implementation libs.httpclient5
     implementation libs.javax.inject
     implementation libs.gson
     implementation libs.guava
