--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ junit = "4.13"
 truth = "1.1.3"
 truthExtension = "1.0.1"
 javaxInject = "1"
+httpClient5 = "5.0.3"
 
 [plugins]
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
@@ -37,3 +38,4 @@ junit = { module = "junit:junit", version.ref = "junit" }
 truth = { module = "com.google.truth:truth", version.ref = "truth" }
 truth-extension = { module = "com.google.truth.extensions:truth-java8-extension", version.ref = "truthExtension" }
 javax-inject = { module = "javax.inject:javax.inject", version.ref = "javaxInject" }
+httpclient5 = { module = "org.apache.httpcomponents.client5:httpclient5", version.ref = "httpClient5" }
