--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -15,7 +15,7 @@ dependencies {
     implementation libs.guava
     implementation libs.flogger
     implementation libs.univocity.parsers
-    implementation 'com.google.geometry:s2-geometry:2.0.0'
+    implementation libs.geometry
     testImplementation group: 'junit', name: 'junit', version: '4.13'
     testImplementation libs.truth
 }
