--- a/core/build.gradle
+++ b/core/build.gradle
@@ -40,9 +40,9 @@ dependencies {
     implementation libs.geometry
     implementation libs.guava
     implementation 'commons-validator:commons-validator:1.6'
-    implementation 'com.googlecode.libphonenumber:libphonenumber:8.12.13'
+    implementation libs.libphonenumber
     implementation libs.flogger
-    implementation 'io.github.classgraph:classgraph:4.8.146'
+    implementation libs.classgraph
     implementation 'org.aspectj:aspectjrt:1.9.20'
     implementation 'org.aspectj:aspectjweaver:1.9.20'
     testImplementation libs.flogger.system.backend
