--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,8 @@ truthExtension = "1.0.1"
 javaxInject = "1"
 httpClient5 = "5.0.3"
 geometry = "2.0.0"
+libphonenumber = "8.12.13"
+classgraph = "4.8.146"
 
 [plugins]
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
@@ -41,3 +43,5 @@ truth-extension = { module = "com.google.truth.extensions:truth-java8-extension"
 javax-inject = { module = "javax.inject:javax.inject", version.ref = "javaxInject" }
 httpclient5 = { module = "org.apache.httpcomponents.client5:httpclient5", version.ref = "httpClient5" }
 geometry = { module = "com.google.geometry:s2-geometry", version.ref = "geometry" }
+libphonenumber = { module = "com.googlecode.libphonenumber:libphonenumber", version.ref = "libphonenumber" }
+classgraph = { module = "io.github.classgraph:classgraph", version.ref = "classgraph" }
