--- a/main/build.gradle
+++ b/main/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     implementation libs.geometry
     implementation 'org.thymeleaf:thymeleaf:3.0.15.RELEASE'
     implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'
-    implementation 'io.github.classgraph:classgraph:4.8.146'
+    implementation libs.classgraph
     implementation 'org.locationtech.jts:jts-core:1.20.0'
     testImplementation group: 'junit', name: 'junit', version: '4.13'
     testImplementation libs.truth
