--- a/main/build.gradle
+++ b/main/build.gradle
@@ -40,10 +40,10 @@ dependencies {
     implementation libs.flogger.system.backend
     implementation libs.univocity.parsers
     implementation libs.geometry
-    implementation 'org.thymeleaf:thymeleaf:3.0.15.RELEASE'
+    implementation libs.thymeleaf
     implementation 'com.vladsch.flexmark:flexmark-all:0.64.8'
     implementation libs.classgraph
-    implementation 'org.locationtech.jts:jts-core:1.20.0'
+    implementation libs.location.tech
     testImplementation group: 'junit', name: 'junit', version: '4.13'
     testImplementation libs.truth
     testImplementation libs.truth.extension
