--- a/core/build.gradle
+++ b/core/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation libs.commons.lang3
     implementation libs.javax.inject
     implementation 'org.apache.httpcomponents:httpclient:4.5.2'
-    implementation 'commons-io:commons-io:2.8.0'
+    implementation libs.commons.io
     implementation libs.univocity.parsers
     implementation libs.gson
     implementation libs.geometry
