--- a/output-comparator/build.gradle
+++ b/output-comparator/build.gradle
@@ -7,7 +7,7 @@ plugins {
 dependencies {
     implementation project(':model')
     implementation project(':core')
-    implementation 'commons-io:commons-io:2.8.0'
+    implementation libs.commons.io
     implementation 'com.google.api-client:google-api-client:1.31.2'
     annotationProcessor libs.auto.value
     compileOnly libs.auto.value.annotations
