--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ locationtech = "1.20.0"
 flexmark = "0.64.8"
 commonsIO = "2.8.0"
 commonsValidator = "1.6"
+jcommander = "1.48"
 
 [plugins]
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
@@ -55,3 +56,4 @@ thymeleaf = { module = "org.thymeleaf:thymeleaf", version.ref = "thymeleaf" }
 flexmark = { module = "com.vladsch.flexmark:flexmark-all", version.ref = "flexmark" }
 commons-io = { module = "commons-io:commons-io", version.ref = "commonsIO" }
 commons-validator = { module = "commons-validator:commons-validator", version.ref = "commonsValidator" }
+jcommander = { module = "com.beust:jcommander", version.ref = "jcommander" }
