--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,8 @@ flexmark = "0.64.8"
 commonsIO = "2.8.0"
 commonsValidator = "1.6"
 jcommander = "1.48"
+javaPoet = "1.13.0"
+apiClient = "1.31.2"
 
 [plugins]
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
@@ -57,3 +59,5 @@ flexmark = { module = "com.vladsch.flexmark:flexmark-all", version.ref = "flexma
 commons-io = { module = "commons-io:commons-io", version.ref = "commonsIO" }
 commons-validator = { module = "commons-validator:commons-validator", version.ref = "commonsValidator" }
 jcommander = { module = "com.beust:jcommander", version.ref = "jcommander" }
+java-poet = { module = "com.squareup:javapoet", version.ref = "javaPoet" }
+api-client = { module = "com.google.api-client:google-api-client", version.ref = "apiClient" }
