--- a/output-comparator/build.gradle
+++ b/output-comparator/build.gradle
@@ -8,7 +8,7 @@ dependencies {
     implementation project(':model')
     implementation project(':core')
     implementation libs.commons.io
-    implementation 'com.google.api-client:google-api-client:1.31.2'
+    implementation libs.api.client
     annotationProcessor libs.auto.value
     compileOnly libs.auto.value.annotations
     implementation libs.guava
