--- a/model/build.gradle
+++ b/model/build.gradle
@@ -12,6 +12,6 @@ plugins {
 dependencies {
     annotationProcessor libs.auto.value
     compileOnly libs.auto.value.annotations
-    implementation 'org.jetbrains:annotations:20.1.0'
-    implementation 'com.google.code.findbugs:jsr305:3.0.2'
+    implementation libs.jetbrains.annotations
+    implementation libs.findbugs
 }
