used httpclient5 for all libraries

--- a/app/gui/build.gradle
+++ b/app/gui/build.gradle
@@ -47,7 +47,7 @@ shadowJar {
         // loaded via reflection
         exclude(project(':main'))
 
-        exclude(dependency('org.apache.httpcomponents:httpclient'))
+        exclude(dependency(libs.httpclient5))
     }
 
     // Some of our dependencies include their own module-info declarations.  We drop
