--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -37,7 +37,7 @@ shadowJar {
         // Validator classes are loaded dynamically from the main project, so we exclude the project
         // from minimization.
         exclude(project(':main'))
-        exclude(dependency('org.apache.httpcomponents:httpclient'))
+        exclude(dependency(libs.httpClient5))
     }
     // Change the JAR name from 'main' to 'gtfs-validator'
     archiveBaseName = rootProject.name
