--- a/cli/build.gradle
+++ b/cli/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation libs.flogger.system.backend
     implementation libs.guava
 
-    testImplementation group: 'junit', name: 'junit', version: '4.13'
+    testImplementation libs.junit
     testImplementation libs.truth
     testImplementation libs.truth.extension
     testImplementation libs.mockito.core
