--- a/core/build.gradle
+++ b/core/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation libs.aspectjrt
     implementation libs.aspectjrt.weaver
     testImplementation libs.flogger.system.backend
-    testImplementation group: 'junit', name: 'junit', version: '4.13'
+    testImplementation libs.junit
     testImplementation libs.truth
     testImplementation libs.truth.extension
     testImplementation libs.mockito.core
