--- a/main/build.gradle
+++ b/main/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     implementation libs.flexmark
     implementation libs.classgraph
     implementation libs.location.tech
-    testImplementation group: 'junit', name: 'junit', version: '4.13'
+    testImplementation libs.junit
     testImplementation libs.truth
     testImplementation libs.truth.extension
     testImplementation libs.mockito.core
