--- a/processor/notices/build.gradle
+++ b/processor/notices/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation libs.commons.lang3
     implementation libs.guava
     implementation libs.gson
-    testImplementation group: 'junit', name: 'junit', version: '4.13'
+    testImplementation libs.junit
     testImplementation libs.truth
 }
 
