--- a/web/service/build.gradle
+++ b/web/service/build.gradle
@@ -34,7 +34,7 @@ shadowJar {
         // Validator classes are loaded dynamically from the main project, so we exclude the project
         // from minimization.
         exclude(project(':main'))
-        exclude(dependency('org.apache.httpcomponents:httpclient'))
+        exclude(dependency(libs.httpclient5.get().toString()))
     }
     // Change the JAR name from 'main' to 'gtfs-validator'
     archiveBaseName = rootProject.name
