--- a/model/build.gradle
+++ b/model/build.gradle
@@ -10,8 +10,8 @@ plugins {
 
 
 dependencies {
-    annotationProcessor 'com.google.auto.value:auto-value:1.7.4'
-    compileOnly 'com.google.auto.value:auto-value-annotations:1.7.4'
-    implementation 'org.jetbrains:annotations:20.1.0'
-    implementation 'com.google.code.findbugs:jsr305:3.0.2'
+    annotationProcessor libs.auto.value
+    compileOnly libs.auto.value.annotations
+    implementation libs.jetbrains.annotations
+    implementation libs.findbugs
 }
