--- a/output-comparator/build.gradle
+++ b/output-comparator/build.gradle
@@ -7,17 +7,17 @@ plugins {
 dependencies {
     implementation project(':model')
     implementation project(':core')
-    implementation 'commons-io:commons-io:2.8.0'
-    implementation 'com.google.api-client:google-api-client:1.31.2'
-    annotationProcessor 'com.google.auto.value:auto-value:1.7.4'
-    compileOnly 'com.google.auto.value:auto-value-annotations:1.7.4'
-    implementation 'com.google.guava:guava:31.0.1-jre'
-    implementation 'com.google.flogger:flogger:0.5.1'
-    implementation 'com.google.flogger:flogger-system-backend:0.5.1'
-    implementation 'com.beust:jcommander:1.48'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    testImplementation "com.google.truth:truth:1.0.1"
-    testImplementation group: 'junit', name: 'junit', version: '4.9'
+    implementation libs.commons.io
+    implementation libs.api.client
+    annotationProcessor libs.auto.value
+    compileOnly libs.auto.value.annotations
+    implementation libs.guava
+    implementation libs.flogger
+    implementation libs.flogger.system.backend
+    implementation libs.jcommander
+    implementation libs.gson
+    testImplementation libs.truth
+    testImplementation libs.junit
 }
 
 jar {
