--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -5,18 +5,18 @@ plugins {
 dependencies {
     implementation project(':model')
     implementation project(':core')
-    annotationProcessor 'com.google.auto.service:auto-service:1.0-rc4'
-    compileOnly 'com.google.auto.service:auto-service:1.0-rc4'
-    annotationProcessor 'com.google.auto.value:auto-value:1.7.4'
-    compileOnly 'com.google.auto.value:auto-value-annotations:1.7.4'
-    implementation 'javax.inject:javax.inject:1'
-    implementation 'com.squareup:javapoet:1.13.0'
-    implementation 'org.apache.commons:commons-lang3:3.6'
-    implementation 'com.google.guava:guava:31.0.1-jre'
-    implementation 'com.google.flogger:flogger:0.6'
-    implementation 'com.univocity:univocity-parsers:2.9.0'
-    implementation 'com.google.geometry:s2-geometry:2.0.0'
-    testImplementation group: 'junit', name: 'junit', version: '4.13'
-    testImplementation 'com.google.truth:truth:1.0.1'
+    annotationProcessor libs.auto.service
+    compileOnly libs.auto.service
+    annotationProcessor libs.auto.value
+    compileOnly libs.auto.value.annotations
+    implementation libs.javax.inject
+    implementation libs.java.poet
+    implementation libs.commons.lang3
+    implementation libs.guava
+    implementation libs.flogger
+    implementation libs.univocity.parsers
+    implementation libs.geometry
+    testImplementation libs.junit
+    testImplementation libs.truth
 }
 
