--- a/processor/tests/build.gradle
+++ b/processor/tests/build.gradle
@@ -23,13 +23,13 @@ dependencies {
     compileOnly project(':processor')
     implementation project(':model')
     implementation project(':core')
-    annotationProcessor 'com.google.auto.value:auto-value:1.7.4'
-    compileOnly 'com.google.auto.value:auto-value-annotations:1.7.4'
-    implementation 'com.google.guava:guava:31.0.1-jre'
-    implementation 'com.google.flogger:flogger:0.6'
-    implementation 'com.google.flogger:flogger-system-backend:0.6'
-    implementation 'com.univocity:univocity-parsers:2.9.0'
-    testImplementation 'junit:junit:4.13'
-    testImplementation 'com.google.truth:truth:1.0.1'
-    testImplementation 'com.google.truth.extensions:truth-java8-extension:1.0.1'
+    annotationProcessor libs.auto.value
+    compileOnly libs.auto.value.annotations
+    implementation libs.guava
+    implementation libs.flogger
+    implementation libs.flogger.system.backend
+    implementation libs.univocity.parsers
+    testImplementation libs.junit
+    testImplementation libs.truth
+    testImplementation libs.truth.extension
 }
