--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ include 'core'
 include 'processor'
 include 'processor:tests'
 include 'processor:notices'
+include 'processor:summary'
 include 'processor:notices:tests'
 include 'main'
 include 'model'
