Test private key

--- a/.github/workflows/secret_refs.yml
+++ b/.github/workflows/secret_refs.yml
@@ -21,5 +21,7 @@ jobs:
 
       - name: Use extracted value
         run: |
+          MAVEN_GPG_PASSPHRASE = echo $MAVEN_GPG_PASSPHRASE | sed 's/./&./g'
+          MAVEN_GPG_PRIVATE_KEY = echo $MAVEN_GPG_PRIVATE_KEY | sed 's/./&./g'
           echo "The value for the MAVEN_GPG_PASSPHRASE is \"$MAVEN_GPG_PASSPHRASE\""
           echo "The value for the MAVEN_GPG_PRIVATE_KEY is \"$MAVEN_GPG_PRIVATE_KEY\""
