--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ allprojects {
 
     // Per the axion-release plugin, this computes the project version based
     // on the most recent tag in the repo.
-    version "1.2-SNAPSHOT"
+    version "1.2"
 
     repositories {
         mavenCentral()
